--- a/index.html
+++ b/index.html
@@ -1,14 +1,185 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- meta tags, links to css, etc. -->
-    <meta charset="utf-8">
-    <title>DIG 245 On the Grid</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>On The Grid</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.cdnfonts.com/css/georgia-pro-cond"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/arial" rel="stylesheet" />
 
-    <!-- visible content goes here -->
-    <h1>DIG 245 On the Grid</h1>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
 
-</body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="headdiv"></div>
+
+        <div class="col-12 col-md-5 col-lg-3">
+          <br />
+          <br /><br />
+          <br />
+          <h1>
+            <strong> Lorem ipsum dolor sit amet, consectetur. </strong>
+          </h1>
+          <p>
+            Adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam. Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi tristique.
+          </p>
+
+          <div class="divider"></div>
+          <br>
+          <h4> <strong>
+            Sed lectus vestibulum mattis ullamcorper velit.
+          </strong>
+          </h4>
+          <p>Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut. Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi tristique senectus et netus et malesuada fames.
+          <br>
+          <ul>
+            <li><strong>Lorem ipsum dolor sit amet.</strong></li>
+          </ul>
+        </p>
+
+      <div class="divider"></div>
+      <br>
+      <h4> <strong>
+        Sed lectus vestibulum mattis ullamcorper velit.
+      </strong>
+      </h4>
+      <p>Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut. Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi tristique senectus et netus et malesuada fames.
+      <br>
+      <ul>
+        <li><strong>Lorem ipsum dolor sit amet.</strong></li>
+      </ul>
+    </p>
+
+    
+    <div class="divider"></div>
+    <br>
+    <h4> <strong>
+      Sed lectus vestibulum mattis ullamcorper velit.
+    </strong>
+    </h4>
+        </div>
+
+        <!-- MIDDLE COLUMN -->
+        <div class="col-0 col-md-7 col-lg-6">
+          <div class="headline">
+            <h2><center>THE SESAME STREET JOURNAL</center></h2>
+          </div>
+          <br />
+          <br />
+          <br />
+          <img src="assets\img\store.png" width="630rem" class="img-fluid" />
+          <br />
+          <br>
+          <h2>
+            <center>
+              Largest Sesame Street-themed Store to Open Soon in Philadelphia.
+            </center>
+          </h2>
+          <p>
+            <center>
+              The new 6,800 square-foot Sesame Street-themed retail store is
+              slated to have its grand opening on Saturday, October 7, inside
+              the Sesame Place theme park.
+            </center>
+          </p>
+
+          <div class="divider"></div>
+          <br>
+          <br>
+          <br>
+          <!-- NESTED GRID -->
+          <div class="row">
+            <div class="col-6 col-md-6 col-lg-6"><img src="assets\img\halloween.png" width="300rem" class="img-fluid"> </div>
+            <div class="col-6 col-md-6 col-lg-6"><img src="assets\img\bigbird.png" width ="300rem" class="img-fluid"> </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-0 col-md-0 col-lg-3">
+          <br />
+          <br />
+          <br />
+          <h4> <strong>
+            Orci dapibus ultrices in iaculis nunc sed augue.
+          </strong>
+          </h4>
+          <div class="divider"></div>
+          <br>
+          <h5>
+            OPINION
+          </h5>
+
+          <div class="rightcol">
+            <br>
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+           <div class="divider"></div>
+
+          <div class="rightcol">
+          
+            <br>
+            <span>  <img src="assets\img\kermit.png" class="img-fluid"> </span><strong> Mattis pellentesque id nibh tortor.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+
+          <div class="divider"></div>
+          <div class="rightcol">
+            <br>
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+
+          <div class="divider"></div>
+          <div class="rightcol">
+            <br>
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+
+          <div class="divider"></div>
+          <div class="rightcol">
+            <br>
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+          <div class="divider"></div>
+
+          <div class="rightcol">
+            <br>
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+
+          <div class="divider"></div>
+
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
