--- a/index.html
+++ b/index.html
@@ -22,66 +22,81 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="headline">
+          <h2 class="text-center">
+            <span class="full-text">THE SESAME STREET JOURNAL </span>
+            <span class="short-text">SSJ</span>
+          </h2>
+        </div>
         <div class="headdiv"></div>
+      </div>
 
+      <!-- GRID WITH CONTENT  -->
+      <div class="row" id="mgrow">
+        <!-- LEFT COLUMN  -->
         <div class="col-12 col-md-5 col-lg-3">
-          <br />
-          <br /><br />
-          <br />
           <h1>
             <strong> Lorem ipsum dolor sit amet, consectetur. </strong>
           </h1>
           <p>
             Adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam. Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi tristique.
+            dolore magna aliqua. Ut enim ad minim veniam. Mattis pellentesque id
+            nibh tortor id aliquet lectus. Habitant morbi tristique.
           </p>
 
           <div class="divider"></div>
-          <br>
-          <h4> <strong>
-            Sed lectus vestibulum mattis ullamcorper velit.
-          </strong>
+          <br />
+          <h4>
+            <strong> Sed lectus vestibulum mattis ullamcorper velit. </strong>
           </h4>
-          <p>Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut. Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi tristique senectus et netus et malesuada fames.
-          <br>
+
+          <p>
+            Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut.
+            Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi
+            tristique senectus et netus et malesuada fames.
+            <br />
+          </p>
+
           <ul>
             <li><strong>Lorem ipsum dolor sit amet.</strong></li>
           </ul>
-        </p>
 
-      <div class="divider"></div>
-      <br>
-      <h4> <strong>
-        Sed lectus vestibulum mattis ullamcorper velit.
-      </strong>
-      </h4>
-      <p>Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut. Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi tristique senectus et netus et malesuada fames.
-      <br>
-      <ul>
-        <li><strong>Lorem ipsum dolor sit amet.</strong></li>
-      </ul>
-    </p>
+          <div class="divider"></div>
+          <br />
+          <h4>
+            <strong> Sed lectus vestibulum mattis ullamcorper velit. </strong>
+          </h4>
+          <p>
+            Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut.
+            Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi
+            tristique senectus et netus et malesuada fames. <br />
+          </p>
 
-    
-    <div class="divider"></div>
-    <br>
-    <h4> <strong>
-      Sed lectus vestibulum mattis ullamcorper velit.
-    </strong>
-    </h4>
+          <ul>
+            <li><strong>Lorem ipsum dolor sit amet.</strong></li>
+          </ul>
+
+          <div class="divider"></div>
+          <br />
+          <h4>
+            <strong> Sed lectus vestibulum mattis ullamcorper velit. </strong>
+          </h4>
+          <p>
+            Eget felis eget nunc lobortis. Dui vivamus arcu felis bibendum ut.
+            Mattis pellentesque id nibh tortor id aliquet lectus. Habitant morbi
+            tristique senectus et netus et malesuada fames. <br />
+          </p>
+
+          <ul>
+            <li><strong>Lorem ipsum dolor sit amet.</strong></li>
+          </ul>
         </div>
 
         <!-- MIDDLE COLUMN -->
-        <div class="col-0 col-md-7 col-lg-6">
-          <div class="headline">
-            <h2><center>THE SESAME STREET JOURNAL</center></h2>
+        <div class="col-0 col-md-7 col-lg-6 order-first order-md-0">
+          <div class="d-none d-md-block d-lg-block">
+            <img src="assets\img\store.png" width="630rem" class="img-fluid" />
           </div>
-          <br />
-          <br />
-          <br />
-          <img src="assets\img\store.png" width="630rem" class="img-fluid" />
-          <br />
-          <br>
           <h2>
             <center>
               Largest Sesame Street-themed Store to Open Soon in Philadelphia.
@@ -96,67 +111,54 @@
           </p>
 
           <div class="divider"></div>
-          <br>
-          <br>
-          <br>
           <!-- NESTED GRID -->
-          <div class="row">
-            <div class="col-6 col-md-6 col-lg-6"><img src="assets\img\halloween.png" width="300rem" class="img-fluid"> </div>
-            <div class="col-6 col-md-6 col-lg-6"><img src="assets\img\bigbird.png" width ="300rem" class="img-fluid"> </div>
+          <div class="row" id="ngrow">
+            <div class="col-12 col-md-12 col-lg-6">
+              <div class="d-none d-md-block d-lg-block">
+                <img
+                  src="assets\img\halloween.png"
+                  width="300rem"
+                  class= "img-fluid"
+                />
+              </div>
+
+              <h4>
+                <strong> 'Spooktacular' Showcased at Sesame Place. </strong>
+              </h4>
+              <p>
+                Mattis pellentesque id nibh tortor id aliquet lectus. Habitant
+                morbi tristique senectus et netus et malesuada fames.
+              </p>
+              <div class="divider"></div>
+            </div>
+            <div class="col-12 col-md-12 col-lg-6">
+              <div class="d-none d-md-block d-lg-block">
+                <img
+                  src="assets\img\bigbird.png"
+                  width="300rem"
+                  class="img-fluid"
+                />
+              </div>
+              <h4><strong> Professor Teams up With Sesame Street. </strong></h4>
+              <p>
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum.
+              </p>
+
+              <div class="d-block d-md-none d-lg-block divider"></div>
+            </div>
           </div>
-
-
         </div>
 
+        <!-- RIGHT COL -->
         <div class="col-0 col-md-0 col-lg-3">
-          <br />
-          <br />
-          <br />
-          <h4> <strong>
-            Orci dapibus ultrices in iaculis nunc sed augue.
-          </strong>
+          <h4>
+            <strong> Orci dapibus ultrices in iaculis nunc sed augue. </strong>
           </h4>
           <div class="divider"></div>
-          <br>
-          <h5>
-            OPINION
-          </h5>
+          <h5>OPINION</h5>
 
           <div class="rightcol">
-            <br>
-            <strong> Mattis pellentesque id nibh tortor id.</strong>
-            <br>
-            <em>Habitant morbi tristique senectus et netus.</em>
-          </div>
-           <div class="divider"></div>
-
-          <div class="rightcol">
-          
-            <br>
-            <span>  <img src="assets\img\kermit.png" class="img-fluid"> </span><strong> Mattis pellentesque id nibh tortor.</strong>
-            <br>
-            <em>Habitant morbi tristique senectus et netus.</em>
-          </div>
-
-          <div class="divider"></div>
-          <div class="rightcol">
-            <br>
-            <strong> Mattis pellentesque id nibh tortor id.</strong>
-            <br>
-            <em>Habitant morbi tristique senectus et netus.</em>
-          </div>
-
-          <div class="divider"></div>
-          <div class="rightcol">
-            <br>
-            <strong> Mattis pellentesque id nibh tortor id.</strong>
-            <br>
-            <em>Habitant morbi tristique senectus et netus.</em>
-          </div>
-
-          <div class="divider"></div>
-          <div class="rightcol">
-            <br>
             <strong> Mattis pellentesque id nibh tortor id.</strong>
             <br>
             <em>Habitant morbi tristique senectus et netus.</em>
@@ -164,14 +166,41 @@
           <div class="divider"></div>
 
           <div class="rightcol">
+            <span> <img src="assets\img\kermit.png"  /> </span>
+            <strong> Mattis pellentesque id nibh tortor.</strong>
             <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+
+          <div class="divider"></div>
+          <div class="rightcol">
             <strong> Mattis pellentesque id nibh tortor id.</strong>
             <br>
             <em>Habitant morbi tristique senectus et netus.</em>
           </div>
 
           <div class="divider"></div>
+          <div class="rightcol">
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
 
+          <div class="divider"></div>
+          <div class="rightcol">
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+          <div class="divider"></div>
+
+          <div class="rightcol">
+            <strong> Mattis pellentesque id nibh tortor id.</strong>
+            <br>
+            <em>Habitant morbi tristique senectus et netus.</em>
+          </div>
+
+          <div class="divider"></div>
         </div>
       </div>
     </div>
